# tracks-api

./: Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt  test.http
tracks_api/data/: tracks.json
tracks_api/setup/: settings.py  urls.py
tracks_api/tracks/: api.py  models.py  schema.py
tracks_api/tracks/management/commands/: ingest_tracks.py
tracks_api/tracks/migrations/: 0001_initial.py
tracks_api/tracks/templates/: index.html
